--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -177,11 +177,11 @@
             <label id="client-label" for="client" style="display: none;">Cliente:</label>
             <select id="client" style="display: none;">
                 <option value="none">Seleccione una opción</option>
-                <option value="cliente1">Cliente 1</option>
-                <option value="cliente2">Cliente 2</option>
-                <option value="cliente3">Cliente 3</option>
-                <option value="cliente4">Cliente 4</option>
-                <option value="cliente5">Cliente 5</option>
+                <option value="cliente1">FEMSA SA DE CV</option>
+                <option value="cliente2">PR CALIBRADORES</option>
+                <option value="cliente3">SAGSA</option>
+                <option value="cliente4">José Torres</option>
+                <option value="cliente5">Ricardo Esparza</option>
             </select>
             <button onclick="filtrarTransferencias()">Filtrar</button>
             <button onclick="showTransferencias()" class="btn btn-primary">Ver transferencias</button>
