--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -184,7 +184,7 @@
                 <option value="cliente5">Ricardo Esparza</option>
             </select>
             <button onclick="filtrarTransferencias()">Filtrar</button>
-            <button onclick="showTransferencias()" class="btn btn-primary">Ver transferencias</button>
+            <button onclick="loadTransferencias()" class="btn btn-primary">Ver transferencias</button>
         </div>
         <div class="container-fluid">
             <div class="row">
