--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -184,7 +184,7 @@
                 <option value="cliente5">Ricardo Esparza</option>
             </select>
             <button onclick="filtrarTransferencias()">Filtrar</button>
-            <button onclick="loadTransferencias()" class="btn btn-primary">Ver transferencias</button>
+            <button onclick="mostrarContenidoSegunUsuario()" class="btn btn-primary">Ver transferencias</button>
         </div>
         <div class="container-fluid">
             <div class="row">
@@ -322,19 +322,11 @@
 
         if (userType === "cliente") {
             contenido = `
-                <div class="customers-list">
-                    <h3>Clientes</h3>
-                    <p>Aquí se muestra la información de los clientes...</p>
-                </div>
             `;
             clientFilter.style.display = "none";
             clientLabel.style.display = "none";
         } else if (userType === "empleado") {
             contenido = `
-                <div class="customers-list">
-                    <h3>Empleados</h3>
-                    <p>Aquí se muestra la información de los empleados...</p>
-                </div>
             `;
             clientFilter.style.display = "inline-block";
             clientLabel.style.display = "inline-block";
