--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -340,13 +340,13 @@
     function loadTransferencias(userType) {
         var transferenciasCliente = [
             { fecha: '2024-01-15', monto: 100, descripcion: 'Pago de servicios' },
-            { fecha: '2024-02-20', monto: 250, descripcion: 'Compra en tienda' },
-            { fecha: '2024-03-05', monto: 150, descripcion: 'Transferencia a amigo' }
+            { fecha: '2024-02-20', monto: 250, descripcion: 'Gastos de material' },
+            { fecha: '2024-03-05', monto: 150, descripcion: 'Pago diferido' }
         ];
 
         var transferenciasEmpleado = [
             { fecha: '2024-01-10', monto: 200, descripcion: 'Pago de nómina' },
-            { fecha: '2024-02-15', monto: 500, descripcion: 'Bonificación' },
+            { fecha: '2024-02-15', monto: 500, descripcion: 'Renta FEMSA SA DE CV' },
             { fecha: '2024-03-25', monto: 300, descripcion: 'Gastos de viaje' }
         ];
 
