--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -264,7 +264,7 @@
 
     // Función para mostrar contenido basado en el tipo de usuario
     function mostrarContenidoSegunUsuario() {
-        const tipoUsuario = localStorage.getItem('tipoUsuario');
+        const tipoUsuario = localStorage.getItem('userType');
         const transferenciasContainer = document.getElementById('transferencias-container');
         const inboxContainer = document.getElementById('inbox-container');
         const outboxContainer = document.getElementById('outbox-container');
