--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -389,6 +389,7 @@
     // Función para filtrar transferencias
     function filtrarTransferencias() {
         var userType = localStorage.getItem("userType");
+        console.log(userType);
         var month = document.getElementById('month').value;
         var year = document.getElementById('year').value;
         var client = document.getElementById('client').value;
