--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -9,6 +9,7 @@
     <!-- Enlace a Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
+
     <!-- Estilos personalizados -->
     <style>
         /* Estilos para la barra de navegación lateral */
@@ -259,6 +260,11 @@
         </form>
     </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.11.338/pdf.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 <!-- Lógica JavaScript -->
 <script>
