--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -284,9 +284,12 @@
         if (userType === 'cliente') {
             clientLabel.textContent = 'Para:';
             clientSelect.innerHTML = `
-                <option value="contacto1">Contacto 1</option>
-                <option value="contacto2">Contacto 2</option>
-                <option value="contacto3">Contacto 3</option>
+                <option value="contacto1">Kelly Cruz Garcia</option>
+                <option value="contacto2">Karen Diaz Chavez</option>
+                <option value="contacto3">Maria Fernanda Herrera Garcia</option>
+                <option value="contacto1">Maria Fernanda Olvera Buenrostro</option>
+                <option value="contacto2">Edgar Mendoza Martinez</option>
+                <option value="contacto3">Carlos Salvador Sanchez Ledesma</option>
             `;
         } else {
             clientLabel.textContent = 'Cliente:';
