--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -308,8 +308,7 @@
     }
 
     function logout() {
-        // Lógica para cerrar sesión
-        console.log('Cerrar sesión');
+        window.location.href = "https://adolfocorona.github.io/blockchain/myapp/templates/login.html";
     }
 
     // Función para mostrar contenido basado en el tipo de usuario
