--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -347,7 +347,7 @@
         if (tipoUsuario === 'cliente') {
             // Cargar mensajes específicos para clientes
             inboxMessages.innerHTML += '<li class="message-item">Mensaje de Kelly Cruz: <br>Hola Ricardo! Te envío el contrato para que lo firmes de favor. Revisa todo los términos!<button class="btn btn-primary" onclick="openPDFModal(\'https://adolfocorona.github.io/blockchain/myapp/static/pdf/CONTRATO%20DE%20ARRENDAMIENTO.pdf\')">Abrir archivo</button></li>'
-            inboxMessages.innerHTML += '<li class="message-item">Mensaje de Carlos: <br>Hola, buen día, espero se encuentre bien! Te envío el contrato para que lo firmes de favor. Revisa todo los términos!<button class="btn btn-primary" onclick="openPDFModal(\'https://adolfocorona.github.io/blockchain/myapp/static/pdf/CONTRATO.pdf\)">Abrir archivo</button></li>';
+            inboxMessages.innerHTML += '<li class="message-item">Mensaje de Carlos: <br>Hola, buen día, espero se encuentre bien! Te envío el contrato para que lo firmes de favor. Revisa todo los términos!<button class="btn btn-primary" onclick="openPDFModal(\'https://adolfocorona.github.io/blockchain/myapp/static/pdf/CONTRATO.pdf\')">Abrir archivo</button></li>';
         } else if (tipoUsuario === 'empleado') {
             // Cargar mensajes específicos para empleados
             inboxMessages.innerHTML += '<li class="message-item">Mensaje de PR CALIBRADORES: <br>Hola Kelly, ya le envié el documento firmado, me podrías hacer favor de revisarlo.<a class="btn btn-primary" href="https://adolfocorona.github.io/blockchain/myapp/static/pdf/CONTRATO_FIRMADO.pdf" target="_blank">Abrir archivo</a></li>';
