--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -549,7 +549,9 @@
         mostrarContenidoSegunUsuario();
     };
 
-    document.addEventListener('DOMContentLoaded', mostrarContenidoSegunUsuario);
+    document.addEventListener('DOMContentLoaded', function() {
+        ostrarContenidoSegunUsuario();
+    });
 </script>
 </body>
 </html>
