--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -190,7 +190,7 @@
                 </div>
             </div>
         </div>
-        <div class="transferencia-list">
+        <div id="transferencia-list" class="transferencia-list">
         </div>
     </div>
 
