--- a/myapp/templates/transferencias.html
+++ b/myapp/templates/transferencias.html
@@ -373,7 +373,7 @@
         } else if (tipoUsuario === 'empleado') {
             // Cargar mensajes específicos para empleados
             outboxMessages.innerHTML += '<li class="message-item">Mensaje para PR CALIBRADORES: <br>Hola buen dia, espero esté teniendo buen día, me comunico para ver si podía revisar los términos de este contrato y hacernos favor de firmarlo. Cualquier aclaración no dude en contactarnos de favor. Saludos!<a class="btn btn-primary" href="https://adolfocorona.github.io/blockchain/myapp/static/pdf/CONTRATO%20DE%20ARRENDAMIENTO.pdf" target="_blank">Abrir archivo</a></li>';
-            outboxMessages.innerHTML += '<li class="message-item">Mensaje para Ricardo Esparza: <br>Hola Ricardo! Te envío el contrato para que lo firmes de favor. Revisa todo los términos!<button class="btn btn-primary" href="https://github.com/adolfocorona/blockchain/blob/master/myapp/static/pdf/CONTRATO_FIRMADO.pdf">Abrir archivo</button></li>';
+            outboxMessages.innerHTML += '<li class="message-item">Mensaje para Ricardo Esparza: <br>Hola Ricardo! Te envío el contrato para que lo firmes de favor. Revisa todo los términos!<a class="btn btn-primary" href="https://github.com/adolfocorona/blockchain/blob/master/myapp/static/pdf/CONTRATO_FIRMADO.pdf">Abrir archivo</a></li>';
         }
     }
 
